--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ mouse_map ctrl+left press ungrabbed,grabbed mouse_click_url
 
 macos_option_as_alt yes
 
-font_family      Fira Code SemiBold
+font_family      FiraCode Nerd Font SemiBold
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
